--- a/OpenGL Window Helper/OpenGL Window Helper.vcxproj
+++ b/OpenGL Window Helper/OpenGL Window Helper.vcxproj
@@ -148,11 +148,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\Graphics\ContextSettings\ContextSettings.cpp" />
+    <ClCompile Include="src\Graphics\Events\EventHandler.cpp" />
     <ClCompile Include="src\Setup.cpp" />
     <ClCompile Include="src\Graphics\Window.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\Graphics\ContextSettings.h" />
+    <ClInclude Include="src\Graphics\ContextSettings\ContextSettings.h" />
+    <ClInclude Include="src\Graphics\Events\Event.h" />
+    <ClInclude Include="src\Graphics\Events\EventHandler.h" />
     <ClInclude Include="src\Setup.h" />
     <ClInclude Include="src\Graphics\Window.h" />
   </ItemGroup>
