--- a/OpenGL Window Helper/OpenGL Window Helper.vcxproj.filters
+++ b/OpenGL Window Helper/OpenGL Window Helper.vcxproj.filters
@@ -21,6 +21,12 @@
     <ClCompile Include="src\Setup.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\Graphics\ContextSettings\ContextSettings.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Graphics\Events\EventHandler.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Graphics\Window.h">
@@ -29,7 +35,13 @@
     <ClInclude Include="src\Setup.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\Graphics\ContextSettings.h">
+    <ClInclude Include="src\Graphics\ContextSettings\ContextSettings.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Graphics\Events\Event.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Graphics\Events\EventHandler.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
