--- a/Application/Application.vcxproj
+++ b/Application/Application.vcxproj
@@ -152,11 +152,15 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\Application.cpp" />
+    <ClCompile Include="src\BetterWindow\BetterWindow.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\OpenGL Window Helper\OpenGL Window Helper.vcxproj">
       <Project>{110a5bc1-2f69-497c-a00d-de671ffbc21e}</Project>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="src\BetterWindow\BetterWindow.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
