--- a/OpenGL Window Helper/OpenGL Window Helper.vcxproj
+++ b/OpenGL Window Helper/OpenGL Window Helper.vcxproj
@@ -148,23 +148,23 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="src\Graphics\ContextSettings\ContextSettings.cpp" />
-    <ClCompile Include="src\Graphics\Events\EventHandler.cpp" />
-    <ClCompile Include="src\Graphics\Mouse\Mouse.cpp" />
-    <ClCompile Include="src\Graphics\Vertex\VertexBuffer.cpp" />
-    <ClCompile Include="src\Setup.cpp" />
-    <ClCompile Include="src\Graphics\Window.cpp" />
-    <ClCompile Include="src\System\Clock\Clock.cpp" />
+    <ClCompile Include="src\WindowHelper\Graphics\ContextSettings\ContextSettings.cpp" />
+    <ClCompile Include="src\WindowHelper\Graphics\Events\EventHandler.cpp" />
+    <ClCompile Include="src\WindowHelper\Graphics\Mouse\Mouse.cpp" />
+    <ClCompile Include="src\WindowHelper\Graphics\Vertex\VertexBuffer.cpp" />
+    <ClCompile Include="src\WindowHelper\Setup.cpp" />
+    <ClCompile Include="src\WindowHelper\Graphics\Window.cpp" />
+    <ClCompile Include="src\WindowHelper\System\Clock\Clock.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\Graphics\ContextSettings\ContextSettings.h" />
-    <ClInclude Include="src\Graphics\Events\Event.h" />
-    <ClInclude Include="src\Graphics\Events\EventHandler.h" />
-    <ClInclude Include="src\Graphics\Mouse\Mouse.h" />
-    <ClInclude Include="src\Graphics\Vertex\VertexBuffer.h" />
-    <ClInclude Include="src\Setup.h" />
-    <ClInclude Include="src\Graphics\Window.h" />
-    <ClInclude Include="src\System\Clock\Clock.h" />
+    <ClInclude Include="src\WindowHelper\Graphics\ContextSettings\ContextSettings.h" />
+    <ClInclude Include="src\WindowHelper\Graphics\Events\Event.h" />
+    <ClInclude Include="src\WindowHelper\Graphics\Events\EventHandler.h" />
+    <ClInclude Include="src\WindowHelper\Graphics\Mouse\Mouse.h" />
+    <ClInclude Include="src\WindowHelper\Graphics\Vertex\VertexBuffer.h" />
+    <ClInclude Include="src\WindowHelper\Setup.h" />
+    <ClInclude Include="src\WindowHelper\Graphics\Window.h" />
+    <ClInclude Include="src\WindowHelper\System\Clock\Clock.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
